--- a/index.html
+++ b/index.html
@@ -1354,10 +1354,14 @@ function attachRatingListenersToGrid(){
           const data = docSnap.data() || {};
           const title = data.title || 'Untitled';
           const price = data.price || '0';
+          const primaryImage = (data.images && data.images.length > 0) ? data.images[0] : data.img || 'https://images.unsplash.com/photo-1520975918016-4d0b5b0b2f3d?q=80&w=1200&auto=format&fit=crop&ixlib=rb-4.0.3&s=placeholder';
           
           const row = document.createElement('div');
           row.style.cssText = 'display:flex;justify-content:space-between;align-items:center;padding:12px;border-bottom:1px solid rgba(255,255,255,0.03)';
           row.innerHTML = `
+            <div style="width: 50px; height: 50px; overflow: hidden; border-radius: 8px; margin-right: 12px; flex-shrink: 0;">
+              <img src="${escapeHtml(primaryImage)}" alt="${escapeHtml(title)}" style="width: 100%; height: 100%; object-fit: cover;">
+            </div>
             <div style="flex:1">
               <strong style="color:#eaf6ff">${escapeHtml(title)}</strong>
               <div class="small" style="color:var(--muted)">₹${escapeHtml(price)}</div>
@@ -1395,6 +1399,12 @@ function attachRatingListenersToGrid(){
             if(!ok) return;
             try{
               await deleteDoc(doc(db, 'products', id));
+              // --- FIX: Clean up the live rating listener for the deleted product ---
+              const cardInGrid = document.querySelector(`.card[data-pid="${id}"]`);
+              if (cardInGrid && typeof cardInGrid._reviewsUnsub === 'function') {
+                cardInGrid._reviewsUnsub(); // Detach the listener
+              }
+
               toast('Product deleted');
               await loadAdminProductsList();
             }catch(err){
