--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@ button,a{
         <div class="logo" aria-hidden="true"><img src="hamsasareeslogo.jpg" alt="Hamsa Sarees Logo"></div>
         <div>
           <div class="title">Hamsa Sarees</div>
-          <div class="small">Jalakandapuram-636501</div>
+          <div class="small">Jalakandapuram-636501<br>⚠ This Website is now under Construction ⚠</div>
         </div>
       </div>
 
