--- a/index.html
+++ b/index.html
@@ -1826,8 +1826,8 @@ function attachRatingListenersToGrid(){
             <span data-val="4">★</span>
             <span data-val="5">★</span>
           </div>
-          <textarea id="reviewText" placeholder="Share your experience (optional)"></textarea>
-          <button id="submitReview" class="btn-ghost">Submit Review</button>
+          <br><br><textarea id="reviewText" placeholder="Share your experience (optional)"></textarea>
+          <br><button id="submitReview" class="btn-ghost">Submit Review</button>
         </div>
       </div>
     </div>
