--- a/yourorders.html
+++ b/yourorders.html
@@ -89,7 +89,7 @@ img{border-radius:8px}
       <button id="logoutBtn" class="btn-ghost" style="display:none">Sign out</button>
       <a href="index.html" class="btn-ghost">Back</a>
       <br><br><h3>For Canceling Order , Contact <a href="https://whatsapp.com/channel/0029Vb7MNNbDZ4LcXUZoSz2y" target="_blank" rel="noopener noreferrer" class="btn" style="margin-top: 16px;">
-            Search on Google About Us
+            Us On Whatsapp
           </a></h3>
     </div>
   </header>
