--- a/yourorders.html
+++ b/yourorders.html
@@ -88,11 +88,16 @@ img{border-radius:8px}
       <button id="loginBtn" class="btn">Sign in</button>
       <button id="logoutBtn" class="btn-ghost" style="display:none">Sign out</button>
       <a href="index.html" class="btn-ghost">Back</a>
-      <br><br><h3>For Canceling Order , Contact <a href="https://whatsapp.com/channel/0029Vb7MNNbDZ4LcXUZoSz2y" target="_blank" rel="noopener noreferrer" class="btn" style="margin-top: 16px;">
-            Us On Whatsapp
-          </a></h3>
     </div>
   </header>
+  <div class="container">
+  <header>
+    <div style="display:flex;gap:12px;align-items:center">
+          <h3>For Canceling Order , Contact <a href="https://whatsapp.com/channel/0029Vb7MNNbDZ4LcXUZoSz2y" target="_blank" rel="noopener noreferrer" class="btn" style="margin-top: 16px;">
+            Us On Whatsapp
+          </a></h3>
+      </div>
+    </div>
   
   <div id="ordersContainer" class="small" style="text-align:center;padding:40px">
     Please sign in to view your orders
