--- a/yourorders.html
+++ b/yourorders.html
@@ -93,8 +93,8 @@ img{border-radius:8px}
   <div class="container">
   <header>
     <div style="display:flex;gap:12px;align-items:center">
-          <h3>For Canceling Order , Contact <a href="https://whatsapp.com/channel/0029Vb7MNNbDZ4LcXUZoSz2y" target="_blank" rel="noopener noreferrer" class="btn" style="margin-top: 16px;">
-            Us On Whatsapp
+          <h3>For Canceling Order , <a href="https://whatsapp.com/channel/0029Vb7MNNbDZ4LcXUZoSz2y" target="_blank" rel="noopener noreferrer" class="btn" style="margin-top: 16px;">
+            Contact Us
           </a></h3>
       </div>
     </div>
