--- a/index.html
+++ b/index.html
@@ -494,28 +494,6 @@ button,a{
     </main>
   </div>
 
-  <!-- Modals (Order, Login, Payment, My Orders, Admin, Detail) -->
-  <div class="modal" id="orderModal" aria-hidden="true">
-    <div class="modal-box" role="dialog" aria-modal="true">
-      <button class="close-x" id="closeOrderModal" title="Close">✕</button>
-      <h2 id="orderModalTitle">Confirm Your Order</h2>
-      <p class="small" id="selectedProduct"></p>
-      <form id="orderForm" method="POST" target="hiddenFrame" action="https://docs.google.com/forms/d/e/1FAIpQLSfREKvTld9R59UADJQK6jxQIbM64tt1iP0M-XiPq4ykOOwe5w/formResponse">
-        <div class="field"><label class="sr-only" for="custName">Your name</label><input id="custName" name="entry.1128392407" placeholder="Your Name" required></div>
-        <div class="field"><label class="sr-only" for="custAddress">Address</label><textarea id="custAddress" name="entry.654904844" placeholder="Address" required></textarea></div>
-        <div class="field"><label class="sr-only" for="custPhone">Mobile number</label><input id="custPhone" name="entry.1644126654" placeholder="Mobile Number" required></div>
-        <div class="field"><input id="productField" name="entry.1866699911" readonly aria-readonly="true"></div>
-        <input type="hidden" id="productImageField">
-
-        <div class="modal-footer" style="margin-top:12px;display:flex;gap:8px;justify-content:flex-end">
-          <button class="btn" id="placeOrder">Place Order</button>
-          <button type="button" class="btn-ghost" id="cancelOrder">Cancel</button>
-        </div>
-      </form>
-      <div id="orderStatus" class="small" style="margin-top:10px;color:var(--success);display:none">Order placed. Thank you!</div>
-    </div>
-  </div>
-
   <div class="modal" id="loginModal" aria-hidden="true">
     <div class="modal-box" role="dialog" aria-modal="true">
       <button class="close-x" id="closeLogin" title="Close">✕</button>
@@ -768,7 +746,7 @@ div.innerHTML = `
 
     // ---- DOM refs ----
     
-    const loginModal = $('loginModal'), orderModal = $('orderModal'), adminModal = $('adminModal');
+    const loginModal = $('loginModal'), adminModal = $('adminModal');
     const loginErr = $('loginErr'), userBadge = $('userBadge'), signOutBtn = $('signOutBtn'), loginShowBtn = $('loginShowBtn'), googleBtnLarge = $('googleBtnLarge');
     const myOrdersBtn = $('myOrdersBtn');
     const adminBtn = $('adminBtn');
@@ -1566,7 +1544,6 @@ function attachRatingListenersToGrid(){
 
     // ---- Generic modal close (fix for all X buttons) ----
     document.querySelectorAll('.close-x').forEach(btn=>{ btn.addEventListener('click', ()=>{ const modal = btn.closest('.modal'); closeModal(modal); }); });
-    $('cancelOrder')?.addEventListener('click', ()=>{ closeModal(orderModal); });
     $('closeOrderDetail')?.addEventListener('click', ()=>{ closeModal(orderDetailModal); });
     $('closeDetailBtn')?.addEventListener('click', ()=>{ closeModal(orderDetailModal); });
 
