--- a/payment.html
+++ b/payment.html
@@ -20,104 +20,170 @@
 <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap" rel="stylesheet">
 
 <style>
+/* ================= ROOT THEME ================= */
+:root{
+  --bg-main:#0a0e1a;
+  --bg-panel:#11172c;
+  --bg-soft:#161e3d;
+  --border:rgba(255,255,255,0.08);
+  --gold:#e6b566;
+  --gold-dark:#cfa34e;
+  --text-main:#eef2ff;
+  --text-muted:#9fb0d1;
+  --success:#3ddc97;
+  --danger:#ff6b6b;
+}
+
+/* ================= RESET ================= */
+*{box-sizing:border-box}
+
 body{
   margin:0;
   font-family:Inter,system-ui,Arial,sans-serif;
-  background:linear-gradient(180deg,#001f3f,#00306b);
-  color:#eaf6ff;
+  background:
+    radial-gradient(900px 400px at 20% -10%, rgba(230,181,102,.12), transparent 60%),
+    linear-gradient(180deg,#080c18,#0a0e1a);
+  color:var(--text-main);
+}
+.container{
+  max-width:1200px;
+  margin:auto;
+  padding:20px 16px;
+}
+header{
   display:flex;
   align-items:center;
-  justify-content:center;
-  min-height:100vh
+  gap:18px;
+  padding:16px 18px;
+  border-radius:16px;
+  background:linear-gradient(180deg,#12183a,#0f152e);
+  border:1px solid var(--border);
+  box-shadow:0 20px 50px rgba(0,0,0,.45);
 }
-.card{
-  background:linear-gradient(180deg,#071522,#06121a);
-  border-radius:14px;
+.brand{ display:flex; gap:12px; align-items:center; }
+.logo{ width:48px; height:48px; border-radius:12px; overflow:hidden; }
+.logo img { width: 100%; height: 100%; object-fit: cover; }
+.title{ font-weight:800; font-size:16px; }
+.small{ font-size:13px; color:var(--text-muted); }
+
+/* Form Styles */
+.payment-card{
+  background:linear-gradient(180deg,#141c3f,#0f1533);
+  border:1px solid var(--border);
+  border-radius:20px;
   padding:24px;
-  max-width:420px;
-  width:100%;
-  box-shadow:0 20px 60px rgba(0,0,0,.45);
-  border:1px solid rgba(255,255,255,0.05)
+  max-width:480px;
+  margin: 40px auto;
+  box-shadow:0 30px 70px rgba(0,0,0,.45);
 }
-h1{margin:0 0 6px;font-size:22px;font-weight:800}
-.small{color:#9fb8d9;font-size:14px;margin-bottom:14px}
-.row{margin-bottom:12px}
-label{display:block;font-size:13px;color:#9fb8d9;margin-bottom:6px}
+h1{margin:0 0 6px;font-size:24px;font-weight:800}
+.row{margin-bottom:14px}
+label{display:block;font-size:13px;color:var(--text-muted);margin-bottom:6px;font-weight:600;}
 input,textarea{
   width:100%;
-  padding:12px;
-  border-radius:10px;
-  border:1px solid rgba(255,255,255,0.08);
-  background:#0b1220;
-  color:#fff;
+  background:#0f1738;
+  border:1px solid var(--border);
+  border-radius:12px;
+  padding:10px;
+  color:var(--text-main);
   font-size:14px
 }
-textarea{min-height:90px;resize:none}
+textarea{min-height:90px;resize:vertical}
 .price{
-  font-size:20px;
+  font-size:22px;
   font-weight:800;
-  color:#4dd0e1;
+  color:var(--gold);
   margin:8px 0 14px
 }
 button{
   width:100%;
-  padding:14px;
-  border-radius:12px;
+  font-family:inherit;
+  background:linear-gradient(90deg,var(--gold),#f3d48c);
+  color:#3b2b08;
   border:none;
-  background:linear-gradient(90deg,#00aaff,#ff5aa3);
-  color:#fff;
+  padding:12px 18px;
+  border-radius:14px;
   font-weight:800;
-  font-size:15px;
-  cursor:pointer
+  cursor:pointer;
+  box-shadow:0 10px 30px rgba(230,181,102,.35);
 }
 button:disabled{opacity:.6;cursor:not-allowed}
 img{
   max-width:100%;
   max-height:260px;
   object-fit:cover;
-  border-radius:12px;
+  border-radius:14px;
   margin-bottom:12px;
   display:none
+}
+.btn-ghost{
+  background:#0f1738;
+  border:1px solid var(--border);
+  color:var(--text-main);
+  padding:9px 16px;
+  border-radius:14px;
+  cursor:pointer;
+  text-decoration: none;
 }
 </style>
 </head>
 
 <body>
+<div class="container">
+  <header>
+    <div class="brand">
+      <div class="logo" aria-hidden="true"><img src="hamsasareeslogo.jpg" alt="Hamsa Sarees Logo"></div>
+      <div>
+        <div class="title">Hamsa Sarees</div>
+        <div class="small">Secure Checkout</div>
+      </div>
+    </div>
+    <div style="flex:1"></div>
+    <a href="index.html" class="btn-ghost">Back to Shop</a>
+  </header>
 
-<div class="card">
-  <h1>Confirm & Pay</h1>
-  <div class="small">Please verify all details carefully</div>
+  <main>
+    <div class="payment-card">
+      <h1>Confirm & Pay</h1>
+      <div class="small" style="margin-bottom: 20px;">Please verify all details carefully</div>
 
-  <div class="row">
-    <label>Product</label>
-    <input id="product" readonly />
-  </div>
+      <div class="row">
+        <label>Product</label>
+        <input id="product" readonly />
+      </div>
 
-  <div class="row">
-    <img id="productImg" alt="Product image">
-  </div>
+      <div class="row">
+        <img id="productImg" alt="Product image">
+      </div>
 
-  <div class="row">
-    <label>Amount</label>
-    <div class="price" id="priceText">₹0</div>
-  </div>
+      <div class="row">
+        <label>Amount</label>
+        <div class="price" id="priceText">₹0</div>
+      </div>
 
-  <div class="row">
-    <label>Your Name</label>
-    <input id="name" required />
-  </div>
+      <div class="row">
+        <label>Your Name</label>
+        <input id="name" required placeholder="Enter your full name" />
+      </div>
 
-  <div class="row">
-    <label>Phone</label>
-    <input id="phone" required />
-  </div>
+      <div class="row">
+        <label>Phone</label>
+        <input id="phone" required placeholder="Enter your 10-digit mobile number" />
+      </div>
 
-  <div class="row">
-    <label>Delivery Address</label>
-    <textarea id="address" required></textarea>
-  </div>
+      <div class="row">
+        <label>Delivery Address</label>
+        <textarea id="address" required placeholder="Enter your full delivery address"></textarea>
+      </div>
 
-  <button id="payBtn" disabled>Pay Securely</button>
+      <button id="payBtn" disabled>Pay Securely</button>
+    </div>
+  </main>
+
+  <footer style="text-align:center;padding:18px;color:#9fb8d9;font-size:13px;line-height:1.6;">
+    ©2025 Hamsa Sarees, unauthorized use is strictly prohibited.<br>
+    Website designed, created & published by Terminal Joint.
+  </footer>
 </div>
 
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
@@ -256,5 +322,3 @@ onAuthStateChanged(auth, user => {
 
 </body>
 </html>
-
-
